# genie-claw

./: CHANGELOG.md  CODEBASE.md  README.md  VECTOR_MEMORY.md  install.sh
.github/workflows/: release.yml
crates/dashboard/: dashboard.js
crates/genie-api/: Cargo.toml
crates/genie-api/src/: http.rs  routes.rs
crates/genie-common/: Cargo.toml
crates/genie-common/src/: config.rs  http.rs  lib.rs  mode.rs
crates/genie-core/src/: chat_ui.html  lib.rs  main.rs  prompt.rs  server.rs  telegram.rs  voice_loop.rs
crates/genie-core/src/eval/: bfcl.rs
crates/genie-core/src/ha/: alias_match.rs  mod.rs  provider.rs
crates/genie-core/src/llm/: openai_compat.rs
crates/genie-core/src/memory/: extract.rs  mod.rs  policy.rs
crates/genie-core/src/tools/: actuation.rs  dispatch.rs  home_action.rs  mod.rs  number_words.rs  quick.rs
crates/genie-core/src/voice/: mod.rs  pipeline.rs  stt.rs
crates/genie-core/tests/: extract_bench.rs  extract_test.rs  home_action_canon_test.rs  quick_spoken_setpoint_test.rs  tool_dispatch_test.rs  tool_gate_integration_test.rs
crates/genie-ctl/src/: main.rs
crates/genie-governor/src/: governor.rs  service_ctl.rs
crates/genie-health/src/: checker.rs
deploy/: setup-jetson.sh
deploy/config/: geniepod.dev.toml  geniepod.toml
deploy/scripts/: start_all.sh
doc/: README.md  configuration.md  deployment-and-ops.md  household-security.md  http-and-cli.md  implementation-status.md  overview.md  repo-map.md  services-and-crates.md
tests/bfcl/: home_tool_cases.jsonl  home_tool_predictions.jsonl
